--- a/index.html
+++ b/index.html
@@ -40,10 +40,6 @@
         solo leia ben ponda jade. Binks jango aayla skywalker skywalker cade. Mustafar darth ventress anakin watto. Yavin jawa sebulba
         owen jinn tatooine sith organa.</p>
 
-        <p>Dagobah hutt jawa leia calamari ventress skywalker yoda. Binks wicket hutt coruscant sidious
-        naboo ackbar tatooine. Hutt lars padmé darth. Maul solo darth darth jabba qui-gon chewbacca darth maul. Moff baba wicket
-        han. C-3po antilles moff qui-gon ahsoka aayla dooku amidala. Palpatine droid amidala droid k-3po twi'lek padmé wookiee. Leia
-        moff calamari mon obi-wan. Solo grievous lando coruscant. Jinn darth palpatine obi-wan mon.</p>
         <span class='expandButton'></span>
       </div>
       <div class="article">
@@ -80,12 +76,7 @@
         elit. Pidgeot Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rattata Lorem ipsum dolor sit amet, consectetur adipiscing
         elit. Raticate Lorem ipsum dolor sit amet, consectetur adipiscing elit. Spearow Lorem ipsum dolor sit amet, consectetur adipiscing
         elit. Fearow Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ekans Lorem ipsum dolor sit amet, consectetur adipiscing
-        elit. Arbok Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pikachu Lorem ipsum dolor sit amet, consectetur adipiscing
-        elit. Raichu Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sandshrew Lorem ipsum dolor sit amet, consectetur adipiscing
-        elit. Sandslash Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nidoran Lorem ipsum dolor sit amet, consectetur
-        adipiscing elit. Nidorina Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nidoqueen Lorem ipsum dolor sit amet,
-        consectetur adipiscing elit. Nidoran Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nidorino Lorem ipsum dolor
-        sit amet, consectetur adipiscing elit. Nidoking Lorem ipsum</p>
+        elit. Arbok Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pikachu Lorem ipsum dolor sit amet, 
         <span class='expandButton'></span>
       </div>
       <div class="article">
@@ -99,16 +90,51 @@
           hodor hodor hodor? Hodor, hodor. Hodor. Hodor, hodor - HODOR hodor, hodor hodor hodor! Hodor, hodor. Hodor. Hodor, HODOR
           hodor, hodor hodor, hodor, hodor hodor. Hodor hodor - hodor - hodor... Hodor hodor hodor hodor hodor hodor hodor?! Hodor
           hodor - hodor hodor hodor. Hodor. Hodor hodor... Hodor hodor hodor hodor hodor? </p>
-        
-        <p>Hodor hodor - hodor... Hodor hodor hodor hodor. Hodor. Hodor! Hodor hodor, hodor hodor hodor hodor hodor; hodor hodor? Hodor!
-          Hodor hodor, HODOR hodor, hodor hodor?! Hodor! Hodor hodor, HODOR hodor, hodor hodor, hodor, hodor hodor. Hodor, hodor.
-          Hodor. Hodor, hodor, hodor. Hodor hodor... Hodor hodor hodor?! Hodor, hodor... Hodor hodor HODOR hodor, hodor hodor. Hodor.
+        <span class='expandButton'></span>
+      </div>
+      <div class="article">
+        <h2>Woah... Lemons!</h2>
+        <p class="date">Nov 5th, 2017</p>
+        <p>Zombie ipsum brains reversus ab cerebellum viral inferno, brein nam rick mend grimes malum cerveau cerebro.
+          De carne cerebro lumbering animata cervello corpora quaeritis. Summus thalamus brains sit​​, morbo basal
+          ganglia vel maleficia? De braaaiiiins apocalypsi gorger omero prefrontal cortex undead survivor fornix dictum
+          mauris. Hi brains mindless mortuis limbic cortex soulless creaturas optic nerve, imo evil braaiinns stalking
+          monstra hypothalamus adventus resi hippocampus dentevil vultus brain comedat cerebella pitiutary gland
+          viventium. Qui optic gland animated corpse, brains cricket bat substantia nigra max brucks spinal cord
+          terribilem incessu brains zomby. The medulla voodoo sacerdos locus coeruleus flesh eater, lateral geniculate
+          nucleus suscitat mortuos braaaains comedere carnem superior colliculus virus. Zonbi cerebellum tattered for
+          brein solum oculi cerveau eorum defunctis cerebro go lum cerebro. Nescio brains an Undead cervello zombies.
+          Sicut thalamus malus putrid brains voodoo horror. Nigh basal ganglia tofth eliv ingdead.
           </p>
+        <span class='expandButton'></span>
+      </div>
+      <div class="article">
+        <h2>"My backpack's got jets"</h2>
+        <p class="date">Nov 5th, 2017</p>
+        <p>Cruisin' Mos Espa in my De Lorean,
+          War's over I'm a peacetime Mandalorian.
+          My story has stumped Star Wars historians
+          Deep in debate buffet plate at Bennigans.
+          Rhyme renegade sure to penetrate
+          First and second defense I won't hesitate.
+          Got a job to do when Darth's the guy that delegates.
+          Got something against Skywalker someone he really hates.
+          I don't give a f#$%. I'm after Solo
+          For all I care he could be hiding at Yoda's dojo.
+          Gotta make the money, credit's no good
+          When the Jawas run the shop in your neighborhood.
+          Think you can cook? I got a grappling hook.
+          Let's make this quick coz I'm really booked.
+          I'm a devious, degenerate defender of the devil,
+          Shut down all the trash compactors on the detention level.
 
-        <p>Hodor, hodor. Hodor. Hodor, hodor, hodor. Hodor hodor, hodor. Hodor hodor, hodor, hodor hodor. Hodor! Hodor hodor, hodor;
-          hodor hodor hodor? Hodor, hodor. Hodor. Hodor, hodor - HODOR hodor, hodor hodor hodor! Hodor, hodor. Hodor. Hodor, HODOR
-          hodor, hodor hodor, hodor, hodor hodor. Hodor hodor - hodor - hodor... Hodor hodor hodor hodor hodor hodor hodor?! Hodor
-          hodor - hodor hodor hodor. Hodor. Hodor hodor... Hodor hodor hodor hodor hodor? </p>
+          <strong>My backpack's got jets.</strong> Well I'm Boba the Fett.
+          Well I bounty hunt for Jabba Hutt to finance my 'Vette.
+          Well I chill in deep space, a mask is over my face.
+          Well I deliver the prize but I still narrow my eyes
+          Coz my time I don't like to waste. Get down!
+
+          </p>
         <span class='expandButton'></span>
       </div>
     </div>
